did a dumb hack to make sure the logo displays properly on firefox

--- a/assets/yoinked.css
+++ b/assets/yoinked.css
@@ -76,6 +76,26 @@
   transition: 0.3s;
 }
 
+.site-title img {
+  height: 2ch;
+  margin: 0 -0.1ch 0.5ch 0;
+}
+
+.site-title .firefox-logo {
+  display: none
+}
+
+@-moz-document url-prefix(){
+  .site-title .chrome-logo {
+    display: none;
+  }
+
+  .site-title .firefox-logo {
+    display: initial;
+  }
+}
+
+
 /* CSS Styling I nabbed from a previous project I did*/
 
 [class^="collapsible-header"],[class*=" collapsible-header"]{
